--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,36 @@
+# Dependencies
 node_modules/
+
+# Environment (sensitive)
 .env
-data/
+.env.local
+.env.production
+
+# Database files
 *.db
+data/*.db
+
+# IDE/Editor
 .DS_Store
 .vscode/
+.idea/
+
+# Logs
 *.log
+logs/
+
+# OS files
+Thumbs.db
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.Python
+venv/
+.venv/
+*.egg-info/
+
+# Build
+dist/
+build/
