--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile.go
     container_name: xionco-golang-api
     ports:
-      - "3001:3001"
+      - '3001:3001'
     environment:
       FIBER_PORT: 3001
       FIBER_ENV: production
@@ -21,7 +21,7 @@ services:
       - xionco-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:3001/health']
       interval: 10s
       timeout: 5s
       retries: 3
@@ -36,11 +36,11 @@ services:
       dockerfile: Dockerfile.py
     container_name: xionco-flask-ai
     ports:
-      - "5000:5000"
+      - '5000:5000'
     environment:
       FLASK_PORT: 5000
       FLASK_ENV: production
-      FLASK_DEBUG: "false"
+      FLASK_DEBUG: 'false'
       PRIMARY_LLM: deepseek
       GEMINI_API_KEY: ${GEMINI_API_KEY}
       DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
@@ -59,7 +59,7 @@ services:
       - xionco-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:5000/health']
       interval: 10s
       timeout: 5s
       retries: 3
@@ -72,7 +72,7 @@ services:
     image: postgres:16-alpine
     container_name: xionco-postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       POSTGRES_DB: ${DB_NAME:-xionco_furniture}
       POSTGRES_USER: ${DB_USER:-furniture_user}
@@ -84,7 +84,7 @@ services:
       - xionco-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-furniture_user} -d ${DB_NAME:-xionco_furniture}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER:-furniture_user} -d ${DB_NAME:-xionco_furniture}']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -95,7 +95,7 @@ services:
     image: redis:7-alpine
     container_name: xionco-redis
     ports:
-      - "6379:6379"
+      - '6379:6379'
     command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
@@ -103,7 +103,7 @@ services:
       - xionco-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
       timeout: 5s
       retries: 3
@@ -113,8 +113,8 @@ services:
     image: nginx:alpine
     container_name: xionco-nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certs:/etc/nginx/certs:ro
